--- a/.github/workflows/source-package.yml
+++ b/.github/workflows/source-package.yml
@@ -12,7 +12,7 @@ jobs:
 
       - name: Build a .tar.gz source package
         run: |
-          export REF=$(echo ${GITHUB_REF} | tr / -)
+          export REF=$(echo ${GITHUB_REF} | cut -d '/' -f 3)
           git archive --format=tar.gz -o yubioath-desktop-$REF.tar.gz --prefix yubioath-desktop/ $REF
 
       - name: Push artifact to s3
@@ -20,5 +20,5 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          export REF=$(echo ${GITHUB_REF} | tr / -)
+          export REF=$(echo ${GITHUB_REF} | cut -d '/' -f 3)
           aws s3 mv yubioath-desktop-$REF.tar.gz s3://yubico-builds/yubioath-desktop/yubioath-desktop-${REF}.tar-gz --acl public-read
