--- a/.github/workflows/source-package.yml
+++ b/.github/workflows/source-package.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Build a .tar.gz source package
         run: |
           export REF=$(echo ${GITHUB_REF} | cut -d '/' -f 3)
-          git archive --format=tar.gz -o yubioath-desktop-$REF.tar.gz --prefix yubioath-desktop/ $REF
+          git archive --format=tar.gz -o yubioath-desktop-$REF.tar.gz --prefix yubioath-desktop/ master
 
       - name: Push artifact to s3
         env:
