--- a/.github/workflows/source-package.yml
+++ b/.github/workflows/source-package.yml
@@ -8,7 +8,11 @@ jobs:
     runs-on: ubuntu-18.04
 
     steps:
-      - uses: actions/checkout@v1
+        # Don't use checkout, we need a full clone for this workflow
+      - name: Clone repository
+        run: |
+          git clone https://github.com/yubico/yubioath-desktop
+          cd yubioath-desktop
 
       - name: Build a .tar.gz source package
         run: |
