--- a/.github/workflows/source-package.yml
+++ b/.github/workflows/source-package.yml
@@ -17,6 +17,7 @@ jobs:
         run: |
           export REF=$(echo ${GITHUB_REF} | cut -d '/' -f 3)
           cd yubioath-desktop
+          git checkout $REF
           git archive --format=tar.gz -o yubioath-desktop-$REF.tar.gz --prefix yubioath-desktop/ $REF
 
       - name: Push artifact to s3
